Se agregan Endpoints REST y se agrega Swagger