@@ -3,7 +3,6 @@ package com.example.tienda.boletas.service;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -17,11 +16,11 @@ import com.example.tienda.productos.service.ProductService;
 public class BoletaService {
 
     private final BoletaRepository boletaRepository;
-    private final ProductService productoService; // Ya lo tienes
+    private final ProductService productService;
 
-    public BoletaService(BoletaRepository boletaRepository, ProductService productoService) {
+    public BoletaService(BoletaRepository boletaRepository, ProductService productService) {
         this.boletaRepository = boletaRepository;
-        this.productoService = productoService;
+        this.productService = productService;
     }
 
     public Boleta crearBoleta(CarritoCompraRequest request) {
@@ -29,15 +28,14 @@ public class BoletaService {
         boleta.setFecha(LocalDateTime.now());
 
         List<DetalleBoleta> detalles = request.getProductos().stream().map(item -> {
-            var producto = productoService.findProductoById(item.getProductoId());
+            var producto = productService.findProductoById(item.getProductoId());
             DetalleBoleta detalle = new DetalleBoleta();
             detalle.setProductoId(producto.getId());
             detalle.setCantidad(item.getCantidad());
-            detalle.setPrecioUnitario(BigDecimal.valueOf(producto.getPrecio())); 
+            detalle.setPrecioUnitario(BigDecimal.valueOf(producto.getPrecio()));
             detalle.setBoleta(boleta);
             return detalle;
-        }).collect(Collectors.toList());
-        
+        }).toList();
 
         boleta.setDetalles(detalles);
 
@@ -48,5 +46,18 @@ public class BoletaService {
         boleta.setTotal(total);
 
         return boletaRepository.save(boleta);
+    }
+
+    public List<Boleta> listarTodas() {
+        return boletaRepository.findAll();
+    }
+
+    public Boleta buscarPorId(Long id) {
+        return boletaRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Boleta no encontrada con ID: " + id));
+    }
+
+    public void eliminarPorId(Long id) {
+        boletaRepository.deleteById(id);
     }
 }
